# pointprocess

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CONTRIB.md  LICENSE  README.md  build-and-run-cov.sh  build-cov-clang.sh  build-cov-gcc-ci.sh  build.sh  codecov.yml  csv.h  main.cpp  noxfile.py  pointprocesslib.py  pyproject.toml  spectral.py
.github/workflows/: main.yml  super-linter.yml
Google_tests/: CMakeLists.txt
benchmarking/: BenchmarkNewton.h  CMakeLists.txt  RunBenchmarks.cpp
docs/: requirements.txt
docs/source/: Gradients-and-Hessians.rst  buildwithcmake.rst  conf.py  dataset.rst  hazardfunction.rst  help.rst  index.rst  inhomogenouspoisson.rst  installdependencies.rst  license.rst  optimizer.rst  regressionpipeline.rst  serialize.rst  spectralanalysis.rst  weightsproducer.rst
docs/source/_static/: MyDataExample.csv  MyTausExample.csv
docs/source/_static/blog-posts/: Gradients-and-Hessians.html  Gradients-and-Hessians.md  Hazard-Function-in-Survival-Anaysis.html  Inhomogenous-Poisson-Process-in-the-Time-Domain.html  Inverse-Gaussian-MLE-for-Point-Process-Analysis.html
docs/source/_static/css/: my_theme.css
docs/source/_templates/: layout.html
examples/: Example.ipynb  README.md  analyze_heartbeat.py  events.npy
ext/Google_tests/: CMakeLists.txt
pointprocess/: InterEventDistributions.h  PointProcessDataset.h  RegressionPipeline.h  WeightsProducer.h  serialize.h
pointprocess/optimizers/: BaseOptimizer.h  GaussianOptimizer.h  InverseGaussianOptimizer.cpp  InverseGaussianOptimizer.h  LogNormalOptimizer.cpp  LogNormalOptimizer.h
src/: CMakeLists.txt  library.cpp  pointprocess.cpp
src/examples/: fullRegression.cpp  singleRegression.cpp
src/pointprocess/: DatasetBuffer.cpp  DatasetBuffer.h  InterEventDistributions.h  OptimizersFactory.cpp  OptimizersFactory.h  PointProcessDataset.cpp  PointProcessDataset.h  PointProcessUtils.cpp  PointProcessUtils.h  RegressionPipeline.cpp  RegressionPipeline.h  WeightsProducer.cpp  WeightsProducer.h
src/pointprocess/optimizers/: BaseOptimizer.cpp  BaseOptimizer.h  GaussianOptimizer.cpp  GaussianOptimizer.h  InverseGaussianOptimizer.cpp  InverseGaussianOptimizer.h  LogNormalOptimizer.cpp  LogNormalOptimizer.h  OptimizersFactory.h
src/pointprocess/spectral/: spectral.cpp  spectral.h
tests/: CMakeLists.txt  RunTests.cpp  TestDatasetBuffer.h  TestOptimizers.cpp  TestOptimizers.h  TestOptimizersFactory.h  TestPipeline.cpp  TestPipeline.h  TestPointProcessDataset.cpp  TestPointProcessDataset.h  TestSpectral.h  TestWeightsProducer.cpp  TestWeightsProducer.h  testData.h
tests/benchmarking/: BenchmarkNewton.h  CMakeLists.txt
tests/data/: testData.h
